# llm-common

./: .gitignore  .mcp.json  .mise.toml  AGENTS.md  BEADS.md  BEADS_TASK_COMPLETION.md  CHANGELOG.md  COMPLETION_SUMMARY.md  DEVELOPMENT_STATUS.md  GEMINI.md  IMPLEMENTATION_STATUS.md  Makefile  POST_MERGE_PLAN.md  POST_PGVECTOR_MERGE_PLAN.md  README.md  TECH_PLAN.md  http_smoke_test.py  pyproject.toml  run_prime_v2_smoke.py  simple_smoke_test.py
.beads/: config.yaml  issues.jsonl  last-touched
.claude/: settings.json
.claude/hooks/: git_safety_guard.py  permission-sentinel  pre-push  state-recovery
.githooks/: _bootstrap.sh  commit-msg  post-rewrite  pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: _context-update.yml  baseline-sync.yml  dx-pr-metadata.yml  pr-context-update.yml  pr-context-update.yml.disabled  verify-agents-md.yml  workflow-syntax.yml
docs/: AGENT_CAPABILITIES.md  AGENT_HANDOFF_PROMPT.md  AGENT_MAIL_TOKEN_ROTATION.md  AGENT_SKILLS_INTEGRATION.md  AUTH_BYPASS_SPEC.md  GLM_CLIENT.md  LLM_COMMON_PG_BACKEND_MIGRATION.md  LLM_FRAMEWORK_COMPLETION.md  LLM_FRAMEWORK_IMPLEMENTATION_PLAN.md  LLM_FRAMEWORK_INDEX.md  LLM_FRAMEWORK_INTEGRATION_VERIFICATION.md  LLM_FRAMEWORK_MIGRATION.md  LLM_FRAMEWORK_PLAN.md  LLM_FRAMEWORK_PRD.md  LLM_FRAMEWORK_REVIEW.md  LLM_FRAMEWORK_SUMMARY.md  LLM_FRAMEWORK_TECHNICAL_SPEC.md  MAKE_CONTRACT.md  ONBOARDING_CHECKLIST.md  QA_CONTRACT.md  RELEASE_CHECKLIST.md  UISMOKE_FIXES_REVIEW.md  UI_SMOKE_AGENT.md  llm-uon.md
docs/LLM_COMMON_WORKSTREAMS/: INTEGRATION_AND_RETRIEVAL.md
docs/TRAINING/: AGENT_LIGHTNING_ANALYSIS.md
docs/architecture/: BROWNFIELD_MAP.md  DATA_AND_STORAGE.md  README.md  WORKFLOWS_AND_PATTERNS.md
docs/bd-llm-common-cmm/: DEXTER_AUDIT.md  JULES_DISPATCH.md  SPEC.md
docs/contracts/: PROVENANCE_CONTRACT.md  stream_event.md
docs/domain/: TEMPLATE.md
examples/: basic_usage.py  glm_browser_agent.py  retrieval_usage.py  test_agent_navigation.py  web_search_usage.py
fragments/: repo-addendum.md  universal-baseline.md
hooks/: pre-commit
llm_common/: __init__.py  glm_models.py  models.py
scripts/: agents-md-compile.zsh  check-workflow-syntax.sh  contract-check.sh  generate_contract_schemas.py  setup-git-hooks.sh  verify-agents-md.sh  verify_embeddings.py  visual_diff.js
tests/: __init__.py  conftest.py  test_agents_import.py  test_clients.py  test_contract_schemas.py  test_core_models.py  test_glm_client.py  test_persona_tester_cli_manifest.py  test_persona_tester_core.py  test_resolver.py  test_uismoke_classification.py  test_uismoke_cli.py  test_uismoke_cookie_actions.py  test_uismoke_harness.py  test_uismoke_new_features.py  test_uismoke_prime_radiant_founder_story.py  test_uismoke_v3.py  test_web_search.py
(+161 files in other folders)
