[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-common"
version = "0.7.0"
description = "Shared LLM framework for affordabot and prime-radiant-ai"
authors = ["Feng Ning <feng@starsend.ai>"]
readme = "README.md"
packages = [{include = "llm_common"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
openai = "^1.0.0"
instructor = "^1.0.0"
pydantic = "^2.0.0"
httpx = ">=0.27.0,<0.29.0"
tenacity = "^8.0.0"
cachetools = "^5.3.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.0.0"
pyyaml = "^6.0.0"
# Optional dependencies for pgvector backend
sqlalchemy = {version = "^2.0.0", optional = true}
asyncpg = {version = ">=0.29.0,<0.31.0", optional = true}
pgvector = {version = "^0.3.0", optional = true}

[tool.poetry.extras]
pgvector = ["sqlalchemy", "asyncpg", "pgvector"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
pytest-mock = "^3.15.1"
playwright = "^1.57.0"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
